<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_weight="0.16"

        />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:hint="@string/login_username" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <CheckBox
        android:id="@+id/login_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/White"
        android:text="@string/login_remember_me"
        android:textColor="@color/White" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_submit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/colorAccent"
            android:text="@string/login_submit"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/login_register"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/MyRegistrationcolor"
            android:text="@string/register"
            android:textColor="@color/White" />

    </RelativeLayout>

</LinearLayout>
