<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zverys.to_do.TaskCreateActivity">

    <Button
        android:id="@+id/Create"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/Create"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Create1"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"/>


    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Create2"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/taskName"/>


</android.support.constraint.ConstraintLayout>
